fix overflow UI Mobile

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -182,9 +182,10 @@ button {
 }
 
 .app-shell {
-  width: min(1120px, calc(100% - 48px));
+  width: min(1140px, calc(100% - 48px));
   margin: 0 auto;
-  padding: 38px 0 80px;
+  padding: 36px 0 80px;
+  overflow-x: hidden; /* ADD THIS */
 }
 
 .app-page.active {
